Step Pages/Component added

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,11 +6,10 @@
                   <td class="align-middle">
                       <h1>MINE YOUR DATA. MIND YOUR BUSINESS.</h1>
                       <h2>Know your customer.</h2>
-                      <%= link_to "CREATE YOUR BARWEISER ACCOUNT", '#', class: 'btn sing-up-btn' %>
+                      <%= link_to "CREATE YOUR BARWEISER ACCOUNT", registration_index_path , class: 'btn sing-up-btn' %>
                   </td>
                 </tr>
               </tbody>
             </table>
-            
       </div>
 </section>
