Structure based Shopping redux example/ "store" error for "Connect(Planform)"

--- a/app/views/registration/index.html.erb
+++ b/app/views/registration/index.html.erb
@@ -1,6 +1,2 @@
-
-<section class="jumbotron index text-center">
-<div id='signup'></div>
+<section id='signup' class='sign-up'></section>
 <%= javascript_pack_tag 'signup' %>
-
-</section>
