--- a/app/views/registration/index.html.erb
+++ b/app/views/registration/index.html.erb
@@ -1,2 +1,5 @@
-<section id='signup' class='sign-up'></section>
+<section class='sign-up text-center'>
+  <%= link_to image_tag("Barweiser3DG.png"), root_path, class: 'heading' %>
+  <div id='signup'></div>
+</section>
 <%= javascript_pack_tag 'signup' %>
