signup working but json parse issue

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,7 +6,7 @@
                   <td class="align-middle">
                       <h1>MINE YOUR DATA. MIND YOUR BUSINESS.</h1>
                       <h2>Know your customer.</h2>
-                      <%= link_to "CREATE YOUR BARWEISER ACCOUNT", registration_index_path , class: 'btn sing-up-btn' %>
+                      <%= link_to "CREATE YOUR BARWEISER ACCOUNT", signup_path , class: 'btn sing-up-btn' %>
                   </td>
                 </tr>
               </tbody>
