--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,6 @@
   </head>
 
   <body>
-      <%= devise_error_messages! %>
     <div class="flash">
        <% if flash[:notice] %>
          <div class="alert alert-success">
@@ -33,4 +32,5 @@
     <%= yield %>
   </body>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </html>
