--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,11 @@
          </div>
        <% end %>
      </div>
+    
+     <%= render "templates/navbar.html" %>
+    
     <%= yield %>
+    
   </body>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
